--- a/Dev/Node/study/express_ejs_mysql/views/customers.ejs
+++ b/Dev/Node/study/express_ejs_mysql/views/customers.ejs
@@ -26,9 +26,9 @@
                     <td><%=data[i].phone%></td>
                     <td><%=data[i].email%></td>
                     <td>
-                        <a class="a-inside edit" href="../customers/edit/<%=data[i].id%>">Edit</a>
+                        <a class="a-inside edit" href="../customers/<%=data[i].id%>/edit">Edit</a>
                        
-                        <a class="a-inside delete" href="../customers/delete/<%=data[i].id%>">Delete</a>
+                        <a class="a-inside delete" href="../customers/<%=data[i].id%>/delete">Delete</a>
                        
                     </td>
                 </tr>
