--- a/Dev/Node/study/express_ejs_mysql/views/delete_customer.ejs
+++ b/Dev/Node/study/express_ejs_mysql/views/delete_customer.ejs
@@ -2,9 +2,10 @@
 
         <div class="page-data">
             
-            <form method="post" action="/customers/delete/<%=data[0].id%>">
+            <form method="post" action="/customers/<%=data[0].id%>">
                 <table cellpadding="11">
                 <tr>
+                    <input type='hidden' name='_method' value='DELETE' />
                     <td class="label">Name</td><td>: <input type="text" name="name" value="<%=data[0].name%>" readonly required></td>
                  </tr>
                  <tr>
