--- a/Dev/Node/study/express_ejs_mysql/views/edit_customer.ejs
+++ b/Dev/Node/study/express_ejs_mysql/views/edit_customer.ejs
@@ -2,9 +2,10 @@
 
         <div class="page-data">
             
-            <form method="post" action="/customers/edit/<%=data[0].id%>">
+            <form method="post" action="/customers/<%=data[0].id%>">
                 <table cellpadding="11">
                 <tr>
+                    <input type='hidden' name='_method' value='PUT' />
                     <td class="label">Name</td><td>: <input type="text" name="name" value="<%=data[0].name%>" required></td>
                  </tr>
                  <tr>
@@ -22,7 +23,7 @@
                  <tr>
                     <td class="label"></td>
                     <td>
-                        &nbsp; <input type="submit" name="submit" value="Save">
+                        &nbsp; <input type="submit" name="submit" value="Update">
                        <input type="button" name="cancel" value="Cancel" class="cancel" onClick="cancelAdd()">
                     </td>
                  </tr>
